--- a/scss/fonts/_kingfisher.scss
+++ b/scss/fonts/_kingfisher.scss
@@ -7,6 +7,7 @@
     url('#{$font-path}kingfisher/kingfisher-1.woff') format('woff'),
     url('#{$font-path}kingfisher/kingfisher-1.ttf') format('truetype'),
     url('#{$font-path}kingfisher/kingfisher-1.svg#wf') format('svg');
+  font-display: swap
 }
 
 @font-face {
@@ -18,4 +19,5 @@
     url('#{$font-path}kingfisher/kingfisher-2.woff') format('woff'),
     url('#{$font-path}kingfisher/kingfisher-2.ttf') format('truetype'),
     url('#{$font-path}kingfisher/kingfisher-2.svg#wf') format('svg');
+  font-display: swap
 }
